--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'Science fiction'
+- GITenberg
 title: Raiders of the Universes
 url: http://www.gutenberg.org/ebooks/29389
